--- a/web/index.html
+++ b/web/index.html
@@ -2,32 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="A new Flutter project.">
+  
+  <title>Flutter Web App</title>
 
-  <!-- iOS meta tags & icons -->
+  <!-- Icons and Manifest -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+
+  <!-- Responsive settings for mobile -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="sgshubham98">
-  <link rel="apple-touch-icon" href="./icons/Icon-192.png">
-
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="./favicon.png"/>
-
-  <title>sgshubham98</title>
-  <link rel="manifest" href="./manifest.json">
 </head>
 <body>
   <script>
+    // Register service worker
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function () {
-        navigator.serviceWorker.register('./flutter_service_worker.js');
-      });
+      navigator.serviceWorker.register('flutter_service_worker.js');
     }
   </script>
 
-  <!-- Ensure main.dart.js loads correctly -->
-  <script src="./main.dart.js" type="application/javascript" defer></script>
+  <script src="main.dart.js" type="application/javascript" defer></script>
 </body>
 </html>
